--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.2.14.BUILD-SNAPSHOT'
+		springVersionDefault = '5.2.15.BUILD-SNAPSHOT'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.2.5.RELEASE'
 		springAmqpVersion = '2.2.17.BUILD-SNAPSHOT'
@@ -58,7 +58,8 @@ allprojects {
 		springDataNeo4jVersion = '5.2.14.BUILD-SNAPSHOT'
 		springIntegrationVersion = '5.2.12.BUILD-SNAPSHOT'
 		springKafkaVersion = '2.3.14.BUILD-SNAPSHOT'
-		springLdapVersion = '2.3.3.RELEASE'
+		springLdapVersion = '2.3.4.BUILD-SNAPSHOT'
+		micrometerVersion = '1.3.19-SNAPSHOT'
 
 		activemqVersion = '5.15.14'
 		apacheAvroVersion ='1.9.2'
@@ -101,7 +102,6 @@ allprojects {
 		beanshellVersion = '2.0b5'
 		jaxbApiVersion = '2.3.1'
 		jaxbImplVersion = '2.3.0.1'
-		micrometerVersion = '1.3.19-SNAPSHOT'
 		prometheusPushgatewayVersion = '0.10.0'
 		docResourcesVersion = '0.2.5'
 		assertjVersion='3.18.1'
