--- a/build.gradle
+++ b/build.gradle
@@ -47,21 +47,21 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.2.15.BUILD-SNAPSHOT'
+		springVersionDefault = '5.2.15.RELEASE'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.2.5.RELEASE'
-		springAmqpVersion = '2.2.17.BUILD-SNAPSHOT'
-		springDataCommonsVersion = '2.2.14.BUILD-SNAPSHOT'
-		springDataGemfireVersion = '2.2.14.BUILD-SNAPSHOT'
-		springDataJpaVersion = '2.2.14.BUILD-SNAPSHOT'
-		springDataMongodbVersion = '2.2.14.BUILD-SNAPSHOT'
-		springDataNeo4jVersion = '5.2.14.BUILD-SNAPSHOT'
-		springIntegrationVersion = '5.2.12.BUILD-SNAPSHOT'
-		springKafkaVersion = '2.3.14.BUILD-SNAPSHOT'
-		springLdapVersion = '2.3.4.BUILD-SNAPSHOT'
-		micrometerVersion = '1.3.19-SNAPSHOT'
+		springAmqpVersion = '2.2.17.RELEASE'
+		springDataCommonsVersion = '2.2.13.RELEASE'
+		springDataGemfireVersion = '2.2.13.RELEASE'
+		springDataJpaVersion = '2.2.13.RELEASE'
+		springDataMongodbVersion = '2.2.13.RELEASE'
+		springDataNeo4jVersion = '5.2.13.RELEASE'
+		springIntegrationVersion = '5.2.11.RELEASE'
+		springKafkaVersion = '2.3.13.RELEASE'
+		springLdapVersion = '2.3.4.RELEASE'
+		micrometerVersion = '1.3.20'
 
-		activemqVersion = '5.15.14'
+		activemqVersion = '5.15.15'
 		apacheAvroVersion ='1.9.2'
 		aspectjVersion = '1.9.6'
 		commonsDdbcpVersion = '2.7.0'
@@ -72,10 +72,10 @@ allprojects {
 		groovyVersion = '2.5.14'
 		hamcrestVersion = '2.2'
 		h2databaseVersion = '1.4.200'
-		hibernateVersion = '5.4.29.Final'
+		hibernateVersion = '5.4.31.Final'
 		hibernateValidatorVersion = '6.0.22.Final'
 		javaxElVersion = '3.0.0'
-		hsqldbVersion = '2.5.1'
+		hsqldbVersion = '2.5.2'
 		jackson2Version = '2.10.5.1'
 		gsonVersion = '2.8.6'
 		javaMailVersion = '1.6.2'
@@ -88,9 +88,9 @@ allprojects {
 		jmsVersion = '2.0.1'
 		junitVersion = '4.13.2'
 		log4jVersion = '2.13.3'
-		mysqlVersion = '8.0.23'
+		mysqlVersion = '8.0.25'
 		mockitoVersion = '3.3.3'
-		postgresqlVersion = '42.2.19'
+		postgresqlVersion = '42.2.20'
 		quartzVersion = '2.3.2'
 		servletApiVersion = '4.0.1'
 		sqlfireclientVersion = '1.0.3'
