--- a/build.gradle
+++ b/build.gradle
@@ -48,20 +48,20 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.3.7-SNAPSHOT'
+		springVersionDefault = '5.3.7'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.3.1'
-		springAmqpVersion = '2.3.7-SNAPSHOT'
-		springDataCommonsVersion = '2.4.9-SNAPSHOT'
-		springDataGeodeVersion = '2.4.9-SNAPSHOT'
-		springDataJpaVersion = '2.4.9-SNAPSHOT'
-		springDataMongodbVersion = '3.1.9-SNAPSHOT'
-		springIntegrationVersion = '5.4.7-SNAPSHOT'
-		springKafkaVersion = '2.6.8-SNAPSHOT'
-		springLdapVersion = '2.3.4.BUILD-SNAPSHOT'
-		micrometerVersion = '1.5.14-SNAPSHOT'
+		springAmqpVersion = '2.3.7'
+		springDataCommonsVersion = '2.4.9'
+		springDataGeodeVersion = '2.4.9'
+		springDataJpaVersion = '2.4.9'
+		springDataMongodbVersion = '3.1.9'
+		springIntegrationVersion = '5.4.7'
+		springKafkaVersion = '2.6.8'
+		springLdapVersion = '2.3.4.RELEASE'
+		micrometerVersion = '1.5.14'
 
-		activemqVersion = '5.15.14'
+		activemqVersion = '5.15.15'
 		apacheAvroVersion ='1.9.2'
 		aspectjVersion = '1.9.6'
 		commonsDdbcpVersion = '2.8.0'
@@ -72,10 +72,10 @@ allprojects {
 		groovyVersion = '2.5.14'
 		hamcrestVersion = '2.2'
 		h2databaseVersion = '1.4.200'
-		hibernateVersion = '5.4.29.Final'
+		hibernateVersion = '5.4.31.Final'
 		hibernateValidatorVersion = '6.1.7.Final'
 		javaxElVersion = '3.0.0'
-		hsqldbVersion = '2.5.1'
+		hsqldbVersion = '2.5.2'
 		jackson2Version = '2.11.4'
 		gsonVersion = '2.8.6'
 		javaMailVersion = '1.6.2'
@@ -87,16 +87,16 @@ allprojects {
 		jettisonVersion = '1.2' //? => upgrade to 1.4 and the build fails (deprecated anyway via xstream)
 		jmsVersion = '2.0.1'
 		junitVersion = '4.13.2'
-		junitJupiterVersion = '5.7.1'
+		junitJupiterVersion = '5.7.2'
 		log4jVersion = '2.13.3'
-		mysqlVersion = '8.0.23'
+		mysqlVersion = '8.0.25'
 		mockitoVersion = '3.6.28'
-		postgresqlVersion = '42.2.19'
+		postgresqlVersion = '42.2.20'
 		quartzVersion = '2.3.2'
 		servletApiVersion = '4.0.1'
 		sqlfireclientVersion = '1.0.3'
 		sqliteVersion = '3.32.3.3'
-		woodstoxVersion = '6.2.4'
+		woodstoxVersion = '6.2.6'
 		xmlunitVersion = '2.8.2'
 		xstreamVersion = '1.4.16'
 		jrubyVersion = '1.7.27'
@@ -107,8 +107,8 @@ allprojects {
 		docResourcesVersion = '0.2.5'
 		assertjVersion='3.18.1'
 		mongoDbDriverSyncVersion='4.1.2'
-		testcontainersVersion='1.15.2'
-		neo4jVersion='3.2.21'
+		testcontainersVersion='1.15.3'
+		neo4jVersion='3.2.23'
 	}
 
 	apply plugin: 'idea'
