--- a/build.gradle
+++ b/build.gradle
@@ -797,7 +797,7 @@ task schemaZip(type: Zip) {
 	}
 }
 
-task docsZip(type: Zip) {
+task docsZip(type: Zip, dependsOn: [asciidoctor, asciidoctorPdf]) {
 		group = 'Distribution'
 		classifier = 'docs'
 		description = "Builds -${classifier} archive containing api and reference " +
