--- a/build.gradle
+++ b/build.gradle
@@ -48,18 +48,18 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.3.7'
+		springVersionDefault = '5.3.8-SNAPSHOT'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.3.1'
-		springAmqpVersion = '2.3.7'
-		springDataCommonsVersion = '2.4.9'
-		springDataGeodeVersion = '2.4.9'
-		springDataJpaVersion = '2.4.9'
-		springDataMongodbVersion = '3.1.9'
-		springIntegrationVersion = '5.4.7'
-		springKafkaVersion = '2.6.8'
-		springLdapVersion = '2.3.4.RELEASE'
-		micrometerVersion = '1.5.14'
+		springAmqpVersion = '2.3.8-SNAPSHOT'
+		springDataCommonsVersion = '2.4.10-SNAPSHOT'
+		springDataGeodeVersion = '2.4.10-SNAPSHOT'
+		springDataJpaVersion = '2.4.10-SNAPSHOT'
+		springDataMongodbVersion = '3.1.10-SNAPSHOT'
+		springIntegrationVersion = '5.4.8-SNAPSHOT'
+		springKafkaVersion = '2.6.9-SNAPSHOT'
+		springLdapVersion = '2.3.5.BUILD-SNAPSHOT'
+		micrometerVersion = '1.5.15-SNAPSHOT'
 
 		activemqVersion = '5.15.15'
 		apacheAvroVersion ='1.9.2'
