--- a/build.gradle
+++ b/build.gradle
@@ -47,18 +47,18 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.2.15.RELEASE'
+		springVersionDefault = '5.2.16.BUILD-SNAPSHOT'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.2.5.RELEASE'
-		springAmqpVersion = '2.2.17.RELEASE'
-		springDataCommonsVersion = '2.2.13.RELEASE'
-		springDataGemfireVersion = '2.2.13.RELEASE'
-		springDataJpaVersion = '2.2.13.RELEASE'
-		springDataMongodbVersion = '2.2.13.RELEASE'
-		springDataNeo4jVersion = '5.2.13.RELEASE'
-		springIntegrationVersion = '5.2.11.RELEASE'
-		springKafkaVersion = '2.3.13.RELEASE'
-		springLdapVersion = '2.3.4.RELEASE'
+		springAmqpVersion = '2.2.18.BUILD-SNAPSHOT'
+		springDataCommonsVersion = '2.2.14.BUILD-SNAPSHOT'
+		springDataGemfireVersion = '2.2.14.BUILD-SNAPSHOT'
+		springDataJpaVersion = '2.2.14.BUILD-SNAPSHOT'
+		springDataMongodbVersion = '2.2.14.BUILD-SNAPSHOT'
+		springDataNeo4jVersion = '5.2.14.BUILD-SNAPSHOT'
+		springIntegrationVersion = '5.2.12.BUILD-SNAPSHOT'
+		springKafkaVersion = '2.3.14.BUILD-SNAPSHOT'
+		springLdapVersion = '2.3.5.BUILD-SNAPSHOT'
 		micrometerVersion = '1.3.20'
 
 		activemqVersion = '5.15.15'
