--- a/build.gradle
+++ b/build.gradle
@@ -409,6 +409,7 @@ project('spring-batch-infrastructure') {
 
 project('spring-batch-docs') {
 	description = 'Spring Batch Docs'
+	project.tasks.findByPath("artifactoryPublish")?.enabled = false
 }
 
 project('spring-batch-core-tests') {
