--- a/spring-batch-core/pom.xml
+++ b/spring-batch-core/pom.xml
@@ -72,6 +72,12 @@
 			<version>${jackson.version}</version>
 			<optional>true</optional>
 		</dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>${jackson.version}</version>
+            <optional>true</optional>
+        </dependency>
 		<dependency>
 			<groupId>jakarta.annotation</groupId>
 			<artifactId>jakarta.annotation-api</artifactId>
