--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,11 @@
 		<woodstox-core.version>6.2.5</woodstox-core.version>
 		<aspectj.version>1.9.6</aspectj.version>
 		<mysql-connector-java.version>8.0.23</mysql-connector-java.version>
+		<postgresql.version>42.2.22</postgresql.version>
+		<db2.version>11.5.6.0</db2.version>
+		<oracle.version>21.1.0.0</oracle.version>
+		<sqlserver.version>9.2.1.jre8</sqlserver.version>
+		<jtds.version>1.3.1</jtds.version>
 		<testcontainers.version>1.15.3</testcontainers.version>
 		<com.ibm.jbatch-tck-spi.version>1.0</com.ibm.jbatch-tck-spi.version>
 		<javax.inject.version>1</javax.inject.version>
