Update Asciidoctor version and restore the dynamic ToC
Update Asciidoctor to the latest version. Also, prior commits had
removed the scripts that enable the dynamic ToC. A new line in the
docs pom restores the scripts.

--- a/spring-batch-docs/pom.xml
+++ b/spring-batch-docs/pom.xml
@@ -87,6 +87,7 @@
                             <backend>html5</backend>
                             <doctype>book</doctype>
                             <attributes>
+                                <docinfodir>${project.build.directory}/asciidoc</docinfodir>
                                 <docinfo>shared</docinfo>
                                 <stylesdir>css/</stylesdir>
                                 <stylesheet>spring.css</stylesheet>
