--- a/build.gradle
+++ b/build.gradle
@@ -48,18 +48,18 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.3.13-SNAPSHOT'
+		springVersionDefault = '5.3.13'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.3.1'
-		springAmqpVersion = '2.3.12-SNAPSHOT'
-		springDataCommonsVersion = '2.4.15-SNAPSHOT'
-		springDataGeodeVersion = '2.4.15-SNAPSHOT'
-		springDataJpaVersion = '2.4.15-SNAPSHOT'
-		springDataMongodbVersion = '3.1.15-SNAPSHOT'
-		springIntegrationVersion = '5.4.12-SNAPSHOT'
-		springKafkaVersion = '2.6.12-SNAPSHOT'
-		springLdapVersion = '2.3.5.BUILD-SNAPSHOT'
-		micrometerVersion = '1.5.18-SNAPSHOT'
+		springAmqpVersion = '2.3.12'
+		springDataCommonsVersion = '2.4.15'
+		springDataGeodeVersion = '2.4.15'
+		springDataJpaVersion = '2.4.15'
+		springDataMongodbVersion = '3.1.15'
+		springIntegrationVersion = '5.4.12'
+		springKafkaVersion = '2.6.12'
+		springLdapVersion = '2.3.4.RELEASE'
+		micrometerVersion = '1.5.17'
 
 		activemqVersion = '5.15.15'
 		apacheAvroVersion ='1.9.2'
@@ -72,7 +72,7 @@ allprojects {
 		groovyVersion = '2.5.14'
 		hamcrestVersion = '2.2'
 		h2databaseVersion = '1.4.200'
-		hibernateVersion = '5.4.31.Final'
+		hibernateVersion = '5.4.32.Final'
 		hibernateValidatorVersion = '6.1.7.Final'
 		javaxElVersion = '3.0.0'
 		hsqldbVersion = '2.5.2'
@@ -89,9 +89,9 @@ allprojects {
 		junitVersion = '4.13.2'
 		junitJupiterVersion = '5.7.2'
 		log4jVersion = '2.13.3'
-		mysqlVersion = '8.0.25'
+		mysqlVersion = '8.0.27'
 		mockitoVersion = '3.6.28'
-		postgresqlVersion = '42.2.20'
+		postgresqlVersion = '42.2.24'
 		quartzVersion = '2.3.2'
 		servletApiVersion = '4.0.1'
 		sqlfireclientVersion = '1.0.3'
@@ -108,7 +108,7 @@ allprojects {
 		assertjVersion='3.18.1'
 		mongoDbDriverSyncVersion='4.1.2'
 		testcontainersVersion='1.15.3'
-		neo4jVersion='3.2.23'
+		neo4jVersion='3.2.27'
 	}
 
 	apply plugin: 'idea'
