--- a/build.gradle
+++ b/build.gradle
@@ -48,17 +48,17 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.3.13'
+		springVersionDefault = '5.3.14-SNAPSHOT'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.3.1'
-		springAmqpVersion = '2.3.12'
-		springDataCommonsVersion = '2.4.15'
-		springDataGeodeVersion = '2.4.15'
-		springDataJpaVersion = '2.4.15'
-		springDataMongodbVersion = '3.1.15'
-		springIntegrationVersion = '5.4.12'
-		springKafkaVersion = '2.6.12'
-		springLdapVersion = '2.3.4.RELEASE'
+		springAmqpVersion = '2.3.13-SNAPSHOT'
+		springDataCommonsVersion = '2.4.16-SNAPSHOT'
+		springDataGeodeVersion = '2.4.16-SNAPSHOT'
+		springDataJpaVersion = '2.4.16-SNAPSHOT'
+		springDataMongodbVersion = '3.1.16-SNAPSHOT'
+		springIntegrationVersion = '5.4.13-SNAPSHOT'
+		springKafkaVersion = '2.6.13-SNAPSHOT'
+		springLdapVersion = '2.3.5.BUILD-SNAPSHOT'
 		micrometerVersion = '1.5.17'
 
 		activemqVersion = '5.15.15'
