--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,7 @@ allprojects {
 		springIntegrationVersion = '5.4.13-SNAPSHOT'
 		springKafkaVersion = '2.6.13-SNAPSHOT'
 		springLdapVersion = '2.3.5.BUILD-SNAPSHOT'
-		micrometerVersion = '1.5.17'
+		micrometerVersion = '1.7.8-SNAPSHOT'
 
 		activemqVersion = '5.15.15'
 		apacheAvroVersion ='1.9.2'
