--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,7 @@
 		<maven-project-info-reports-plugin.version>3.1.2</maven-project-info-reports-plugin.version>
 		<maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
 		<maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
+		<build-helper-maven-plugin.version>1.10</build-helper-maven-plugin.version>
 	</properties>
 
 	<build>
