--- a/spring-batch-docs/pom.xml
+++ b/spring-batch-docs/pom.xml
@@ -172,6 +172,36 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>${build-helper-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>attach-zip</id>
+                        <goals>
+                            <goal>attach-artifact</goal>
+                        </goals>
+                        <phase>site</phase>
+                        <configuration>
+                            <artifacts>
+                                <artifact>
+                                    <file>${project.build.directory}/spring-batch-${project.version}-docs.zip</file>
+                                    <type>zip;zip.type=docs;zip.deployed=false</type>
+                                </artifact>
+                                <artifact>
+                                    <file>${project.build.directory}/spring-batch-${project.version}-schemas.zip</file>
+                                    <type>zip;zip.type=schemas;zip.deployed=false</type>
+                                </artifact>
+                                <artifact>
+                                    <file>${project.build.directory}/spring-batch-${project.version}-dist.zip</file>
+                                    <type>zip;zip.type=dist;zip.deployed=false</type>
+                                </artifact>
+                            </artifacts>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-deploy-plugin</artifactId>
                 <version>${maven-deploy-plugin.version}</version>
