--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
 		<spring-data-mongodb.version>4.0.0-SNAPSHOT</spring-data-mongodb.version>
 		<spring-kafka.version>3.0.0-SNAPSHOT</spring-kafka.version>
 		<spring-amqp.version>3.0.0-SNAPSHOT</spring-amqp.version>
-		<spring-ldap.version>2.3.5.BUILD-SNAPSHOT</spring-ldap.version>
+		<spring-ldap.version>3.0.0-SNAPSHOT</spring-ldap.version>
 		<avro.version>1.9.2</avro.version>
 		<gson.version>2.8.9</gson.version>
 		<hibernate-core-jakarta.version>5.6.3.Final</hibernate-core-jakarta.version>
