--- a/pom.xml
+++ b/pom.xml
@@ -51,20 +51,20 @@
 		<java.version>17</java.version>
 
 		<!-- production dependencies -->
-		<spring-framework.version>6.0.0-SNAPSHOT</spring-framework.version>
+		<spring-framework.version>6.0.0-M2</spring-framework.version>
 		<spring-retry.version>1.3.1</spring-retry.version>
-		<spring-integration.version>6.0.0-SNAPSHOT</spring-integration.version>
-		<micrometer.version>2.0.0-SNAPSHOT</micrometer.version>
+		<spring-integration.version>6.0.0-M1</spring-integration.version>
+		<micrometer.version>2.0.0-M1</micrometer.version>
 		<jackson.version>2.13.1</jackson.version>
 
 		<!-- optional production dependencies -->
-		<spring-data-geode.version>3.0.0-SNAPSHOT</spring-data-geode.version>
-		<spring-data-commons.version>3.0.0-SNAPSHOT</spring-data-commons.version>
-		<spring-data-jpa.version>3.0.0-SNAPSHOT</spring-data-jpa.version>
-		<spring-data-mongodb.version>4.0.0-SNAPSHOT</spring-data-mongodb.version>
-		<spring-kafka.version>3.0.0-SNAPSHOT</spring-kafka.version>
-		<spring-amqp.version>3.0.0-SNAPSHOT</spring-amqp.version>
-		<spring-ldap.version>3.0.0-SNAPSHOT</spring-ldap.version>
+		<spring-data-geode.version>3.0.0-M1</spring-data-geode.version>
+		<spring-data-commons.version>3.0.0-M1</spring-data-commons.version>
+		<spring-data-jpa.version>3.0.0-M1</spring-data-jpa.version>
+		<spring-data-mongodb.version>4.0.0-M1</spring-data-mongodb.version>
+		<spring-kafka.version>3.0.0-M1</spring-kafka.version>
+		<spring-amqp.version>3.0.0-M1</spring-amqp.version>
+		<spring-ldap.version>3.0.0-M1</spring-ldap.version>
 		<avro.version>1.9.2</avro.version>
 		<gson.version>2.8.9</gson.version>
 		<hibernate-core-jakarta.version>5.6.3.Final</hibernate-core-jakarta.version>
@@ -74,7 +74,7 @@
 		<jakarta.validation-api.version>3.0.0</jakarta.validation-api.version>
 		<jakarta.persistence-api.version>3.0.0</jakarta.persistence-api.version>
 		<neo4j-ogm-core.version>3.2.28</neo4j-ogm-core.version>
-		<mongodb-driver-sync.version>4.4.0</mongodb-driver-sync.version>
+		<mongodb-driver-sync.version>4.4.1</mongodb-driver-sync.version>
 		<xstream.version>1.4.18</xstream.version>
 		<junit-jupiter.version>5.8.2</junit-jupiter.version>
 
@@ -86,23 +86,23 @@
 		<xmlunit.version>2.8.4</xmlunit.version>
 		<commons-io.version>2.11.0</commons-io.version>
 		<commons-dbcp2.version>2.9.0</commons-dbcp2.version>
-		<slf4j.version>1.7.32</slf4j.version>
+		<slf4j.version>1.7.33</slf4j.version>
 		<hsqldb.version>2.6.1</hsqldb.version>
 		<h2.version>2.1.210</h2.version>
 		<sqlite.version>3.36.0.3</sqlite.version>
 		<derby.version>10.14.2.0</derby.version>
-		<artemis.version>2.19.0</artemis.version>
+		<artemis.version>2.20.0</artemis.version>
 		<jaxb-core.version>3.0.2</jaxb-core.version>
-		<log4j.version>2.17.0</log4j.version>
+		<log4j.version>2.17.1</log4j.version>
 		<hibernate-validator.version>7.0.2.Final</hibernate-validator.version>
 		<jakarta.el-api.version>4.0.0</jakarta.el-api.version>
 		<jakarta.el.version>4.0.2</jakarta.el.version>
 		<jakarta.inject-api.version>2.0.0</jakarta.inject-api.version>
 		<jakarta.xml.bind-api.version>3.0.1</jakarta.xml.bind-api.version>
 		<jakarta.mail.version>2.0.1</jakarta.mail.version>
-		<woodstox-core.version>6.2.7</woodstox-core.version>
+		<woodstox-core.version>6.2.8</woodstox-core.version>
 		<aspectj.version>1.9.7</aspectj.version>
-		<mysql-connector-java.version>8.0.27</mysql-connector-java.version>
+		<mysql-connector-java.version>8.0.28</mysql-connector-java.version>
 		<postgresql.version>42.3.1</postgresql.version>
 		<db2.version>11.5.6.0</db2.version>
 		<oracle.version>21.1.0.0</oracle.version>
@@ -112,14 +112,14 @@
 		<jsonassert.version>1.5.0</jsonassert.version>
 
 		<!-- samples dependencies -->
-		<spring-rabbit.version>3.0.0-SNAPSHOT</spring-rabbit.version>
+		<spring-rabbit.version>3.0.0-M1</spring-rabbit.version>
 		<quartz.version>2.3.2</quartz.version>
 		<prometheus_pushgateway.version>0.11.0</prometheus_pushgateway.version>
 		<groovy.version>2.5.14</groovy.version>
 
 		<!-- documentation dependencies -->
 		<spring-doc-resources.version>0.2.5</spring-doc-resources.version>
-		<asciidoctorj-pdf.version>1.5.4</asciidoctorj-pdf.version>
+		<asciidoctorj-pdf.version>1.6.2</asciidoctorj-pdf.version>
 		<asciidoctorj-epub.version>1.5.1</asciidoctorj-epub.version>
 
 		<!-- plugin versions -->
