--- a/spring-batch-docs/pom.xml
+++ b/spring-batch-docs/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.springframework.batch</groupId>
         <artifactId>spring-batch</artifactId>
-        <version>5.0.0-SNAPSHOT</version>
+        <version>5.0.0-M1</version>
     </parent>
     <artifactId>spring-batch-docs</artifactId>
     <name>Spring Batch Docs</name>
@@ -93,15 +93,15 @@
                                 <stylesheet>spring.css</stylesheet>
                                 <linkcss>true</linkcss>
                                 <icons>font</icons>
-                                <sectanchors/>
+                                <sectanchors />
                                 <source-highlighter>highlight.js</source-highlighter>
                                 <highlightjsdir>js/highlight</highlightjsdir>
                                 <highlightjs-theme>github</highlightjs-theme>
-                                <idprefix/>
+                                <idprefix />
                                 <idseparator>-</idseparator>
                                 <spring-version>${project.version}</spring-version>
                                 <revnumber>${project.version}</revnumber>
-                                <allow-uri-read/>
+                                <allow-uri-read />
                             </attributes>
                         </configuration>
                     </execution>
