--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
 		<spring-framework.version>6.0.0-M2</spring-framework.version>
 		<spring-retry.version>1.3.1</spring-retry.version>
 		<spring-integration.version>6.0.0-M1</spring-integration.version>
-		<micrometer.version>2.0.0-M1</micrometer.version>
+		<micrometer.version>2.0.0-SNAPSHOT</micrometer.version>
 		<jackson.version>2.13.1</jackson.version>
 
 		<!-- optional production dependencies -->
