--- a/pom.xml
+++ b/pom.xml
@@ -52,20 +52,20 @@
 		<java.version>17</java.version>
 
 		<!-- production dependencies -->
-		<spring-framework.version>6.0.0-SNAPSHOT</spring-framework.version>
-		<spring-retry.version>1.3.4-SNAPSHOT</spring-retry.version>
-		<spring-integration.version>6.0.0-SNAPSHOT</spring-integration.version>
-		<micrometer.version>1.10.0-SNAPSHOT</micrometer.version>
+		<spring-framework.version>6.0.0-M5</spring-framework.version>
+		<spring-retry.version>1.3.3</spring-retry.version>
+		<spring-integration.version>6.0.0-M4</spring-integration.version>
+		<micrometer.version>1.10.0-M3</micrometer.version>
 		<jackson.version>2.13.3</jackson.version>
 
 		<!-- optional production dependencies -->
-		<spring-data-geode.version>3.0.0-SNAPSHOT</spring-data-geode.version>
-		<spring-data-commons.version>3.0.0-SNAPSHOT</spring-data-commons.version>
-		<spring-data-jpa.version>3.0.0-SNAPSHOT</spring-data-jpa.version>
-		<spring-data-mongodb.version>4.0.0-SNAPSHOT</spring-data-mongodb.version>
-		<spring-kafka.version>3.0.0-SNAPSHOT</spring-kafka.version>
-		<spring-amqp.version>3.0.0-SNAPSHOT</spring-amqp.version>
-		<spring-ldap.version>3.0.0-SNAPSHOT</spring-ldap.version>
+		<spring-data-geode.version>3.0.0-M5</spring-data-geode.version>
+		<spring-data-commons.version>3.0.0-M5</spring-data-commons.version>
+		<spring-data-jpa.version>3.0.0-M5</spring-data-jpa.version>
+		<spring-data-mongodb.version>4.0.0-M5</spring-data-mongodb.version>
+		<spring-kafka.version>3.0.0-M5</spring-kafka.version>
+		<spring-amqp.version>3.0.0-M3</spring-amqp.version>
+		<spring-ldap.version>3.0.0-M2</spring-ldap.version>
 		<avro.version>1.9.2</avro.version>
 		<gson.version>2.9.0</gson.version>
 		<hibernate-core.version>6.1.1.Final</hibernate-core.version>
@@ -74,13 +74,13 @@
 		<jakarta.jms-api.version>3.0.0</jakarta.jms-api.version>
 		<jakarta.validation-api.version>3.0.0</jakarta.validation-api.version>
 		<jakarta.persistence-api.version>3.0.0</jakarta.persistence-api.version>
-		<neo4j-ogm-core.version>3.2.33</neo4j-ogm-core.version>
-		<mongodb-driver-sync.version>4.6.0</mongodb-driver-sync.version>
+		<neo4j-ogm-core.version>3.2.36</neo4j-ogm-core.version>
+		<mongodb-driver-sync.version>4.7.0</mongodb-driver-sync.version>
 		<xstream.version>1.4.19</xstream.version>
 		<junit-jupiter.version>5.8.2</junit-jupiter.version>
 
 		<!-- test dependencies -->
-		<micrometer-tracing.version>1.0.0-SNAPSHOT</micrometer-tracing.version>
+		<micrometer-tracing.version>1.0.0-M6</micrometer-tracing.version>
 		<junit.version>4.13.2</junit.version>
 		<junit-vintage-engine.version>${junit-jupiter.version}</junit-vintage-engine.version>
 		<hamcrest.version>2.2</hamcrest.version>
@@ -116,7 +116,7 @@
 		<jsonassert.version>1.5.0</jsonassert.version>
 
 		<!-- samples dependencies -->
-		<spring-rabbit.version>3.0.0-SNAPSHOT</spring-rabbit.version>
+		<spring-rabbit.version>${spring-amqp.version}</spring-rabbit.version>
 		<quartz.version>2.3.2</quartz.version>
 		<prometheus_pushgateway.version>0.15.0</prometheus_pushgateway.version>
 		<groovy.version>3.0.10</groovy.version>
