--- a/spring-batch-core/pom.xml
+++ b/spring-batch-core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.batch</groupId>
 		<artifactId>spring-batch</artifactId>
-		<version>5.0.0-SNAPSHOT</version>
+		<version>5.0.0-M4</version>
 	</parent>
 	<artifactId>spring-batch-core</artifactId>
 	<packaging>jar</packaging>
@@ -23,7 +23,7 @@
 		<dependency>
 			<groupId>org.springframework.batch</groupId>
 			<artifactId>spring-batch-infrastructure</artifactId>
-			<version>5.0.0-SNAPSHOT</version>
+			<version>5.0.0-M4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
