--- a/spring-batch-integration/pom.xml
+++ b/spring-batch-integration/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.batch</groupId>
 		<artifactId>spring-batch</artifactId>
-		<version>5.0.0-SNAPSHOT</version>
+		<version>5.0.0-M4</version>
 	</parent>
 	<artifactId>spring-batch-integration</artifactId>
 	<name>Spring Batch Integration</name>
@@ -22,7 +22,7 @@
 		<dependency>
 			<groupId>org.springframework.batch</groupId>
 			<artifactId>spring-batch-core</artifactId>
-			<version>5.0.0-SNAPSHOT</version>
+			<version>5.0.0-M4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.integration</groupId>
@@ -65,7 +65,7 @@
 		<dependency>
 			<groupId>org.springframework.batch</groupId>
 			<artifactId>spring-batch-test</artifactId>
-			<version>5.0.0-SNAPSHOT</version>
+			<version>5.0.0-M4</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
