--- a/pom.xml
+++ b/pom.xml
@@ -52,20 +52,20 @@
 		<java.version>17</java.version>
 
 		<!-- production dependencies -->
-		<spring-framework.version>6.0.0-M5</spring-framework.version>
-		<spring-retry.version>1.3.3</spring-retry.version>
-		<spring-integration.version>6.0.0-M4</spring-integration.version>
-		<micrometer.version>1.10.0-M3</micrometer.version>
+		<spring-framework.version>6.0.0-SNAPSHOT</spring-framework.version>
+		<spring-retry.version>1.3.4-SNAPSHOT</spring-retry.version>
+		<spring-integration.version>6.0.0-SNAPSHOT</spring-integration.version>
+		<micrometer.version>1.10.0-SNAPSHOT</micrometer.version>
 		<jackson.version>2.13.3</jackson.version>
 
 		<!-- optional production dependencies -->
-		<spring-data-geode.version>3.0.0-M5</spring-data-geode.version>
-		<spring-data-commons.version>3.0.0-M5</spring-data-commons.version>
-		<spring-data-jpa.version>3.0.0-M5</spring-data-jpa.version>
-		<spring-data-mongodb.version>4.0.0-M5</spring-data-mongodb.version>
-		<spring-kafka.version>3.0.0-M5</spring-kafka.version>
-		<spring-amqp.version>3.0.0-M3</spring-amqp.version>
-		<spring-ldap.version>3.0.0-M2</spring-ldap.version>
+		<spring-data-geode.version>3.0.0-SNAPSHOT</spring-data-geode.version>
+		<spring-data-commons.version>3.0.0-SNAPSHOT</spring-data-commons.version>
+		<spring-data-jpa.version>3.0.0-SNAPSHOT</spring-data-jpa.version>
+		<spring-data-mongodb.version>4.0.0-SNAPSHOT</spring-data-mongodb.version>
+		<spring-kafka.version>3.0.0-SNAPSHOT</spring-kafka.version>
+		<spring-amqp.version>3.0.0-SNAPSHOT</spring-amqp.version>
+		<spring-ldap.version>3.0.0-SNAPSHOT</spring-ldap.version>
 		<avro.version>1.9.2</avro.version>
 		<gson.version>2.9.0</gson.version>
 		<hibernate-core.version>6.1.1.Final</hibernate-core.version>
@@ -80,7 +80,7 @@
 		<junit-jupiter.version>5.8.2</junit-jupiter.version>
 
 		<!-- test dependencies -->
-		<micrometer-tracing.version>1.0.0-M6</micrometer-tracing.version>
+		<micrometer-tracing.version>1.0.0-SNAPSHOT</micrometer-tracing.version>
 		<junit.version>4.13.2</junit.version>
 		<junit-vintage-engine.version>${junit-jupiter.version}</junit-vintage-engine.version>
 		<hamcrest.version>2.2</hamcrest.version>
