--- a/spring-batch-test/pom.xml
+++ b/spring-batch-test/pom.xml
@@ -64,6 +64,12 @@
 
 		<!-- test dependencies -->
 		<dependency>
+			<groupId>org.junit.vintage</groupId>
+			<artifactId>junit-vintage-engine</artifactId>
+			<version>${junit-vintage-engine.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
 			<version>${mockito.version}</version>
